added cache for same calls

--- a/payment-manager-app/package.json
+++ b/payment-manager-app/package.json
@@ -25,6 +25,7 @@
     "libphonenumber-js": "^1.11.17",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-cacheable": "^3.0.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
